# BlockFinderPool

./: CONTRIBUTING.md  LICENSE  NOTICE.md  PROJECT_SUMMARY.md  README.md  docker-compose.solo.yml  docker-compose.standalone.yml  docker-compose.yml  run.sh  setup-blackhole.sh
dashboard/: Dockerfile  index.html  nginx.conf  package.json
dashboard/src/: App.tsx  api.ts  styles.css
dashboard/src/components/: BlockCandidatesTable.tsx  BlockWindowsTable.tsx  BlocksTable.tsx  MinersTable.tsx  PublicBlocksTable.tsx
pool/: Cargo.toml
pool/src/: config.rs  main.rs  metrics.rs  rpc.rs  vardiff.rs
pool/src/api/: mod.rs
pool/src/share/: mod.rs
pool/src/storage/: mod.rs  sqlite.rs
pool/src/stratum/: mod.rs
pool/src/template/: mod.rs
