[package]
name = "blackhole-pool"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.7"
bitcoin = "0.31"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zmq = "0.10"
futures = "0.3"
dashmap = "5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
